--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignorera känsliga filer
+credentials.json
 __pycache__/
 *.pyc
-venv/
+*.pyo
+*.pyd
+.env
+
+# Streamlit och Python
+.mypy_cache/
+.streamlit/
+.venv/
