--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-yfinance
-gspread
-google-auth
-pandas
+streamlit==1.35.0
+gspread==5.12.4
+google-auth==2.29.0
+yfinance==0.2.40
+pandas==2.2.2
