--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,10 @@
+[theme]
+primaryColor = "#4B8BBE"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif"
+
 [server]
 headless = true
 enableCORS = false
